test/types/tuple/dinan/oobIndex.good
oobIndex.chpl:6: error: tuple index out-of-bounds error (3)
