test/types/tuple/dinan/oobIndex.chpl
// This should generate an error message.  Presently generates
// an internal error.

var x = ("Fahr", "vergnügen");

writeln(x(3));
